[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Passdoor.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/Walk Pass/levels/4.png" type="Texture" id=2]
[ext_resource path="res://scenes/TileMap.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/Player4.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/Passkey4.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Wall Priz4.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Level4.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[node name="Level4" type="Node2D"]
script = ExtResource( 9 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327698, 13, 0, -327697, 13, 0, -327696, 13, 0, -327695, 13, 0, -327694, 13, 0, -327693, 13, 0, -327692, 13, 0, -327691, 13, 0, -327690, 13, 0, -327689, 13, 0, -327688, 13, 0, -327687, 13, 0, -327686, 13, 0, -327685, 13, 0, -327684, 13, 0, -327683, 13, 0, -327682, 13, 0, -327681, 13, 0, -393216, 13, 0, -393215, 13, 0, -393214, 13, 0, -393213, 13, 0, -393212, 13, 0, -393211, 13, 0, -393210, 13, 0, -393209, 13, 0, -393208, 13, 0, -393207, 13, 0, -393206, 13, 0, -393205, 13, 0, -393204, 13, 0, -393203, 13, 0, -262162, 13, 0, -262161, 13, 0, -262160, 13, 0, -262159, 13, 0, -262158, 13, 0, -262157, 13, 0, -262156, 13, 0, -262155, 13, 0, -262154, 13, 0, -262153, 13, 0, -262152, 13, 0, -262151, 13, 0, -262150, 13, 0, -262149, 13, 0, -262148, 13, 0, -262147, 13, 0, -262146, 13, 0, -262145, 13, 0, -327680, 13, 0, -327679, 13, 0, -327678, 13, 0, -327677, 13, 0, -327676, 13, 0, -327675, 13, 0, -327674, 13, 0, -327673, 13, 0, -327672, 13, 0, -327671, 13, 0, -327670, 13, 0, -327669, 13, 0, -327668, 13, 0, -327667, 13, 0, -196626, 13, 0, -196625, 13, 0, -196624, 10, 0, -196623, 10, 0, -196622, 10, 0, -196621, 10, 0, -196620, 10, 0, -196619, 10, 0, -196618, 10, 0, -196617, 10, 0, -196616, 10, 0, -196615, 10, 0, -196614, 10, 0, -196613, 10, 0, -196612, 10, 0, -196611, 10, 0, -196610, 10, 0, -196609, 10, 0, -262144, 10, 0, -262143, 10, 0, -262142, 10, 0, -262141, 10, 0, -262140, 10, 0, -262139, 10, 0, -262138, 10, 0, -262137, 10, 0, -262136, 10, 0, -262135, 10, 0, -262134, 10, 0, -262133, 10, 0, -262132, 13, 0, -262131, 13, 0, -131090, 13, 0, -131089, 13, 0, -131088, 10, 0, -131087, 10, 0, -131086, 10, 0, -131085, 10, 0, -131084, 10, 0, -131083, 10, 0, -131082, 10, 0, -131081, 10, 0, -131080, 10, 0, -131079, 10, 0, -131078, 10, 0, -131077, 10, 0, -131076, 10, 0, -131075, 10, 0, -131074, 10, 0, -131073, 10, 0, -196608, 10, 0, -196607, 10, 0, -196606, 10, 0, -196605, 10, 0, -196604, 10, 0, -196603, 10, 0, -196602, 10, 0, -196601, 10, 0, -196600, 10, 0, -196599, 10, 0, -196598, 10, 0, -196597, 10, 0, -196596, 13, 0, -196595, 13, 0, -65554, 13, 0, -65553, 13, 0, -65552, 13, 0, -65551, 13, 0, -65550, 13, 0, -65549, 13, 0, -65548, 13, 0, -65547, 13, 0, -65546, 13, 0, -65545, 13, 0, -65544, 13, 0, -65543, 13, 0, -65542, 13, 0, -65541, 13, 0, -65540, 13, 0, -65539, 13, 0, -65538, 10, 0, -65537, 13, 0, -131072, 13, 0, -131071, 13, 0, -131070, 13, 0, -131069, 13, 0, -131068, 13, 0, -131067, 13, 0, -131066, 13, 0, -131065, 13, 0, -131064, 13, 0, -131063, 13, 0, -131062, 13, 0, -131061, 13, 0, -131060, 13, 0, -131059, 13, 0, -18, 13, 0, -17, 13, 0, -16, 10, 0, -15, 10, 0, -14, 10, 0, -13, 10, 0, -12, 10, 0, -11, 10, 0, -10, 10, 0, -9, 10, 0, -8, 10, 0, -7, 10, 0, -6, 10, 0, -5, 10, 0, -4, 10, 0, -3, 10, 0, -2, 10, 0, -1, 10, 0, -65536, 10, 0, -65535, 10, 0, -65534, 10, 0, -65533, 10, 0, -65532, 10, 0, -65531, 10, 0, -65530, 10, 0, -65529, 10, 0, -65528, 10, 0, -65527, 10, 0, -65526, 10, 0, -65525, 10, 0, -65524, 13, 0, -65523, 13, 0, 65518, 13, 0, 65519, 13, 0, 65520, 10, 0, 65521, 13, 0, 65522, 13, 0, 65523, 13, 0, 65524, 13, 0, 65525, 13, 0, 65526, 13, 0, 65527, 13, 0, 65528, 13, 0, 65529, 13, 0, 65530, 10, 0, 65531, 13, 0, 65532, 13, 0, 65533, 13, 0, 65534, 13, 0, 65535, 13, 0, 0, 13, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 10, 0, 7, 13, 0, 8, 13, 0, 9, 13, 0, 10, 13, 0, 11, 13, 0, 12, 13, 0, 13, 13, 0, 131054, 13, 0, 131055, 13, 0, 131056, 10, 0, 131057, 10, 0, 131058, 10, 0, 131059, 10, 0, 131060, 10, 0, 131061, 10, 0, 131062, 10, 0, 131063, 10, 0, 131064, 10, 0, 131065, 10, 0, 131066, 10, 0, 131067, 10, 0, 131068, 10, 0, 131069, 10, 0, 131070, 10, 0, 131071, 10, 0, 65536, 10, 0, 65537, 13, 0, 65538, 10, 0, 65539, 10, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 65544, 10, 0, 65545, 10, 0, 65546, 10, 0, 65547, 10, 0, 65548, 13, 0, 65549, 13, 0, 196590, 10, 0, 196591, 10, 0, 196592, 10, 0, 196593, 13, 0, 196594, 13, 0, 196595, 13, 0, 196596, 13, 0, 196597, 13, 0, 196598, 13, 0, 196599, 13, 0, 196600, 10, 0, 196601, 13, 0, 196602, 13, 0, 196603, 13, 0, 196604, 13, 0, 196605, 13, 0, 196606, 13, 0, 196607, 13, 0, 131072, 13, 0, 131073, 13, 0, 131074, 13, 0, 131075, 10, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 131080, 13, 0, 131081, 13, 0, 131082, 13, 0, 131083, 10, 0, 131084, 13, 0, 131085, 13, 0, 262126, 13, 0, 262127, 13, 0, 262128, 10, 0, 262129, 10, 0, 262130, 10, 0, 262131, 10, 0, 262132, 10, 0, 262133, 10, 0, 262134, 10, 0, 262135, 10, 0, 262136, 10, 0, 262137, 10, 0, 262138, 10, 0, 262139, 10, 0, 262140, 10, 0, 262141, 10, 0, 262142, 13, 0, 262143, 10, 0, 196608, 10, 0, 196609, 10, 0, 196610, 10, 0, 196611, 10, 0, 196612, 10, 0, 196613, 10, 0, 196614, 10, 0, 196615, 10, 0, 196616, 10, 0, 196617, 13, 0, 196618, 10, 0, 196619, 10, 0, 196620, 13, 0, 196621, 13, 0, 327662, 13, 0, 327663, 13, 0, 327664, 10, 0, 327665, 13, 0, 327666, 13, 0, 327667, 13, 0, 327668, 13, 0, 327669, 13, 0, 327670, 13, 0, 327671, 13, 0, 327672, 13, 0, 327673, 13, 0, 327674, 13, 0, 327675, 13, 0, 327676, 13, 0, 327677, 13, 0, 327678, 13, 0, 327679, 13, 0, 262144, 10, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0, 262149, 10, 0, 262150, 13, 0, 262151, 13, 0, 262152, 13, 0, 262153, 13, 0, 262154, 13, 0, 262155, 13, 0, 262156, 13, 0, 262157, 13, 0, 393198, 13, 0, 393199, 13, 0, 393200, 10, 0, 393201, 10, 0, 393202, 10, 0, 393203, 10, 0, 393204, 10, 0, 393205, 10, 0, 393206, 10, 0, 393207, 10, 0, 393208, 10, 0, 393209, 10, 0, 393210, 10, 0, 393211, 10, 0, 393212, 10, 0, 393213, 10, 0, 393214, 10, 0, 393215, 10, 0, 327680, 10, 0, 327681, 13, 0, 327682, 10, 0, 327683, 10, 0, 327684, 10, 0, 327685, 10, 0, 327686, 10, 0, 327687, 10, 0, 327688, 10, 0, 327689, 10, 0, 327690, 10, 0, 327691, 10, 0, 327692, 13, 0, 327693, 13, 0, 458734, 13, 0, 458735, 13, 0, 458736, 13, 0, 458737, 13, 0, 458738, 13, 0, 458739, 13, 0, 458740, 13, 0, 458741, 13, 0, 458742, 13, 0, 458743, 13, 0, 458744, 13, 0, 458745, 13, 0, 458746, 13, 0, 458747, 13, 0, 458748, 13, 0, 458749, 13, 0, 458750, 13, 0, 458751, 13, 0, 393216, 13, 0, 393217, 13, 0, 393218, 13, 0, 393219, 13, 0, 393220, 13, 0, 393221, 13, 0, 393222, 13, 0, 393223, 13, 0, 393224, 13, 0, 393225, 13, 0, 393226, 10, 0, 393227, 13, 0, 393228, 13, 0, 393229, 13, 0, 524270, 13, 0, 524271, 13, 0, 524272, 10, 0, 524273, 10, 0, 524274, 10, 0, 524275, 13, 0, 524276, 10, 0, 524277, 10, 0, 524278, 10, 0, 524279, 10, 0, 524280, 10, 0, 524281, 10, 0, 524282, 10, 0, 524283, 10, 0, 524284, 10, 0, 524285, 10, 0, 524286, 10, 0, 524287, 10, 0, 458752, 10, 0, 458753, 10, 0, 458754, 10, 0, 458755, 10, 0, 458756, 10, 0, 458757, 10, 0, 458758, 10, 0, 458759, 10, 0, 458760, 10, 0, 458761, 10, 0, 458762, 10, 0, 458763, 10, 0, 458764, 13, 0, 458765, 13, 0, 589806, 13, 0, 589807, 13, 0, 589808, 10, 0, 589809, 13, 0, 589810, 13, 0, 589811, 13, 0, 589812, 13, 0, 589813, 13, 0, 589814, 13, 0, 589815, 13, 0, 589816, 13, 0, 589817, 13, 0, 589818, 13, 0, 589819, 13, 0, 589820, 13, 0, 589821, 13, 0, 589822, 10, 0, 589823, 13, 0, 524288, 13, 0, 524289, 13, 0, 524290, 13, 0, 524291, 13, 0, 524292, 13, 0, 524293, 13, 0, 524294, 13, 0, 524295, 13, 0, 524296, 13, 0, 524297, 13, 0, 524298, 13, 0, 524299, 13, 0, 524300, 13, 0, 524301, 13, 0, 655342, 13, 0, 655343, 13, 0, 655344, 10, 0, 655345, 10, 0, 655346, 10, 0, 655347, 10, 0, 655348, 10, 0, 655349, 10, 0, 655350, 10, 0, 655351, 10, 0, 655352, 10, 0, 655353, 10, 0, 655354, 10, 0, 655355, 10, 0, 655356, 10, 0, 655357, 10, 0, 655358, 10, 0, 655359, 10, 0, 589824, 10, 0, 589825, 10, 0, 589826, 10, 0, 589827, 10, 0, 589828, 10, 0, 589829, 10, 0, 589830, 10, 0, 589831, 10, 0, 589832, 10, 0, 589833, 10, 0, 589834, 10, 0, 589835, 10, 0, 589836, 10, 0, 589837, 13, 0, 720878, 13, 0, 720879, 13, 0, 720880, 10, 0, 720881, 10, 0, 720882, 10, 0, 720883, 10, 0, 720884, 10, 0, 720885, 10, 0, 720886, 10, 0, 720887, 10, 0, 720888, 10, 0, 720889, 10, 0, 720890, 10, 0, 720891, 10, 0, 720892, 10, 0, 720893, 10, 0, 720894, 10, 0, 720895, 10, 0, 655360, 10, 0, 655361, 10, 0, 655362, 10, 0, 655363, 10, 0, 655364, 10, 0, 655365, 10, 0, 655366, 10, 0, 655367, 10, 0, 655368, 10, 0, 655369, 10, 0, 655370, 10, 0, 655371, 10, 0, 655372, 13, 0, 655373, 13, 0, 786414, 13, 0, 786415, 13, 0, 786416, 13, 0, 786417, 13, 0, 786418, 13, 0, 786419, 13, 0, 786420, 13, 0, 786421, 13, 0, 786422, 13, 0, 786423, 13, 0, 786424, 13, 0, 786425, 13, 0, 786426, 13, 0, 786427, 13, 0, 786428, 13, 0, 786429, 13, 0, 786430, 13, 0, 786431, 13, 0, 720896, 13, 0, 720897, 13, 0, 720898, 13, 0, 720899, 13, 0, 720900, 13, 0, 720901, 13, 0, 720902, 13, 0, 720903, 13, 0, 720904, 13, 0, 720905, 13, 0, 720906, 13, 0, 720907, 13, 0, 720908, 13, 0, 720909, 13, 0, 851950, 13, 0, 851951, 13, 0, 851952, 13, 0, 851953, 13, 0, 851954, 13, 0, 851955, 13, 0, 851956, 13, 0, 851957, 13, 0, 851958, 13, 0, 851959, 13, 0, 851960, 13, 0, 851961, 13, 0, 851962, 13, 0, 851963, 13, 0, 851964, 13, 0, 851965, 13, 0, 851966, 13, 0, 851967, 13, 0, 786432, 13, 0, 786433, 13, 0, 786434, 13, 0, 786435, 13, 0, 786436, 13, 0, 786437, 13, 0, 786438, 13, 0, 786439, 13, 0, 786440, 13, 0, 786441, 13, 0, 786442, 13, 0, 786443, 13, 0, 786444, 13, 0, 786445, 13, 0 )

[node name="4" type="Sprite" parent="TileMap"]
position = Vector2( -256, 192 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="TileMap"]
margin_left = -256.0
margin_top = 144.0
margin_right = -112.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 1 )
text = "gattoanimations"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -288, -96 )
anchor_mode = 0
current = true
zoom = Vector2( 0.4, 0.42 )

[node name="Passdoor" parent="." instance=ExtResource( 1 )]
position = Vector2( -256, 32 )

[node name="Passkey4" parent="." instance=ExtResource( 6 )]
position = Vector2( 176, 144 )

[node name="Wall Priz4" parent="." instance=ExtResource( 7 )]
position = Vector2( -288, 32 )

[node name="Player4" parent="." instance=ExtResource( 4 )]
position = Vector2( -256, -64 )

[node name="Enemy1" parent="." instance=ExtResource( 8 )]
position = Vector2( 16, -16 )

[node name="Enemy2" parent="." instance=ExtResource( 8 )]
position = Vector2( -224, 16 )

[node name="Enemy3" parent="." instance=ExtResource( 8 )]
position = Vector2( -16, 48 )

[node name="Enemy4" parent="." instance=ExtResource( 8 )]
position = Vector2( 160, 112 )

[node name="Enemy5" parent="." instance=ExtResource( 8 )]
position = Vector2( -240, 160 )
